--- a/package.json
+++ b/package.json
@@ -17,20 +17,25 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "typeorm-ts-node-commonjs -d config/typeorm-cli.config.ts"
   },
   "dependencies": {
     "@nestjs/common": "^8.1.1",
-    "@nestjs/core": "^8.1.1",
-    "@nestjs/platform-express": "^8.1.1",
+    "@nestjs/config": "^2.1.0",
+    "@nestjs/core": "^7.5.5",
+    "@nestjs/platform-express": "^7.5.5",
+    "@nestjs/typeorm": "^7.1.5",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.4.0"
+    "rxjs": "^7.4.0",
+    "typeorm": "^0.3.7"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.3",
     "@nestjs/schematics": "^8.0.4",
-    "@nestjs/testing": "^8.1.1",
+    "@nestjs/testing": "^7.5.5",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.1",
@@ -46,7 +51,7 @@
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
     "ts-loader": "^9.2.6",
-    "ts-node": "^10.3.0",
+    "ts-node": "^10.8.2",
     "tsconfig-paths": "^3.11.0",
     "typescript": "^4.4.4"
   },
