--- a/package.json
+++ b/package.json
@@ -24,8 +24,14 @@
     "@nestjs/common": "^8.1.1",
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^7.5.5",
+    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^7.5.5",
     "@nestjs/typeorm": "^7.1.5",
+    "bcrypt": "^5.0.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -36,9 +42,12 @@
     "@nestjs/cli": "^8.1.3",
     "@nestjs/schematics": "^8.0.4",
     "@nestjs/testing": "^7.5.5",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.1",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
